// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="sc-hmzhuo cLqCC"
>
  No Content
</div>
`;

exports[`renders correctly with a header 1`] = `
<div
  className="sc-hmzhuo cLqCC"
>
  <header
    className="sc-frDJqD dVBssv"
  >
    This is a header
  </header>
</div>
`;

exports[`renders correctly with a header and content 1`] = `
<div
  className="sc-hmzhuo cLqCC"
>
  <header
    className="sc-frDJqD dVBssv"
  >
    This is a header
  </header>
  <section
    className="sc-kvZOFW fwmSsJ"
  >
    This is the panels content
  </section>
</div>
`;
